add pip to environment

--- a/binder/environment.yaml
+++ b/binder/environment.yaml
@@ -12,3 +12,10 @@ dependencies:
   - xarray
   - netcdf4
   - scikit-learn
+  - pip
+  - pip:
+    - nbgitpuller
+    - sphinx-gallery
+    - pandas
+    - matplotlib
+    - gdown
